--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "expenses-monitor-server",
+  "name": "expense-monitor-app",
   "version": "0.0.1",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "cd expense-monitor-client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.4.1"
+    "mongodb": "^3.4.1",
+    "path": "^0.12.7"
   }
 }
