--- a/expense-monitor-client/package.json
+++ b/expense-monitor-client/package.json
@@ -16,7 +16,7 @@
     "jquery": "^3.4.1",
     "mongodb": "^3.4.1",
     "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
     "react-loading": "^2.0.3",
     "react-scripts": "3.3.1"
